--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "bizlogic"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 protobuf = "^4.22.3"
-ipfsclient = "^0.0.7"
+ipfsclient = "0.0.7"
 pandas = "^2.0.0"
 py-multicodec = "^0.2.1"
 requests = "^2.28.2"
