--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,11 @@ nav:
   - Home: 'index.md'
   - Classes:
       - 'LoanApplication': 'classes_loan_application.md'
-      - 'Loan': 'classes_loan.md'
+      - 'Loan': 
+        - 'LoanRepayment': 'classes_loan_repayment.md'
+        - 'LoanStatus': 'classes_loan_status.md'
+        - 'LoanReader': 'classes_loan_reader.md'
+        - 'LoanWriter': 'classes_loan_writer.md'
       - 'Vouch': 'classes_vouch.md'
   - About:
       - 'License': 'LICENSE.md'
